tests/semantic_errors/scope_error.ind
func test(x) {
    if (x > 0) {
        temp = 100;
    }
    return temp; // Error: temp was defined in the 'if' scope
}